--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,6 @@ jobs:
 #         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Response
-      run: python src/response.py
+      run: |
+        python src/response.py
+        echo ${{ github.event.client_payload.unit }}
