--- a/.github/workflows/rkt-update.yml
+++ b/.github/workflows/rkt-update.yml
@@ -25,4 +25,4 @@ jobs:
       run: |
         python src/OR_update.py $ENV{TOKEN}
       env:
-        TOKEN: ${{ secrets.TEST }}
+        TOKEN: ${{ secrets.VSP }}
