--- a/.github/workflows/rkt-update.yml
+++ b/.github/workflows/rkt-update.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+        test_var: ${{ secrets.TEST }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -23,6 +25,5 @@ jobs:
 
     - name: Parsing changes
       run: |
-        python src/OR_update.py $ENV{TOKEN}
-      env:
-        TOKEN: ${{ secrets.VSP }}
+        python src/OR_update.py
+
