--- a/.github/workflows/rkt-update.yml
+++ b/.github/workflows/rkt-update.yml
@@ -16,7 +16,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-        test_var: ${{ secrets.TEST }}
 
     - name: Install dependencies
       run: |
@@ -24,6 +23,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Parsing changes
-      run: |
-        python src/OR_update.py
+      run: python src/OR_update.py
+      env:
+        TEST_VAR: ${{ secrets.TEST }}
+
 
